--- a/briar-android/src/main/res/values-fr/strings.xml
+++ b/briar-android/src/main/res/values-fr/strings.xml
@@ -129,7 +129,6 @@
   <string name="contact_added_toast">Contact ajouté : %s</string>
   <string name="contact_already_exists">Le contact %s existe déjà</string>
   <string name="qr_code_invalid">Le code QR est invalide</string>
-  <string name="qr_code_unsupported">Le code QR que vous tentez de lire appartient à une ancienne version de %s qui n’est plus prise en charge.\n\nVeuillez vous assurer d’utiliser tous les deux la dernière version et ressayer.</string>
   <string name="camera_error">Erreur de la caméra</string>
   <string name="connecting_to_device">Connexion à l’appareil\u2026</string>
   <string name="authenticating_with_device">Autentification avec l’appareil\u2026</string>
@@ -339,10 +338,10 @@
   <string name="tor_mobile_data_title">Utiliser les données cellulaires</string>
   <!--Settings Security and Panic-->
   <string name="security_settings_title">Sécurité</string>
-  <string name="pref_lock_title">Verrouillage de l’écran</string>
+  <string name="pref_lock_title">Verrou de l’appli</string>
   <string name="pref_lock_summary">Utiliser le verrouillage de l’écran de l’appareil pour protéger Briar une fois connecté</string>
   <string name="pref_lock_disabled_summary">Pour utiliser cette fonction, configurez le verrouillage de l’écran sur votre appareil</string>
-  <string name="pref_lock_timeout_title">Délai d’inactivité avant verrouillage de l’écran</string>
+  <string name="pref_lock_timeout_title">Délai d’inactivité avant verrouillage de l’appli</string>
   <!--The %s placeholder is replaced with the following time spans, e.g. 5 Minutes, 1 Hour-->
   <string name="pref_lock_timeout_summary">Si Briar n’est pas utilisée, verrouiller automatiquement après %s</string>
   <!--Will be shown in a list of lock times. Should fit into the %s of "automatically lock it after %s"-->
@@ -394,8 +393,6 @@
   <string name="notify_blog_posts_setting_summary">Afficher des alertes pour les billets de blogue</string>
   <string name="notify_blog_posts_setting_summary_26">Configurer les alertes pour les billets de forum</string>
   <string name="notify_vibration_setting">Vibrer</string>
-  <string name="notify_lock_screen_setting_title">Écran de verrouillage</string>
-  <string name="notify_lock_screen_setting_summary">Afficher les notifications sur l’écran de verrouillage</string>
   <string name="notify_sound_setting">Son</string>
   <string name="notify_sound_setting_default">Sonnerie par défaut</string>
   <string name="notify_sound_setting_disabled">Aucun</string>
